--- a/Solana_Faucet/src/App.scss
+++ b/Solana_Faucet/src/App.scss
@@ -74,7 +74,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
+  gap: 0.5rem;
   > li {
     list-style: none;
     padding: 1rem;
@@ -107,10 +107,16 @@
     color: #ffd166;
   }
   .wallet-adapter-modal-button-close {
-    border: 1px solid red;
-
+    height: 1.5rem;
+    width: 1.5rem;
+    border: 1px solid #ffd166;
+    svg {
+      path {
+        fill: #ffd166;
+      }
+      }
+    
     :hover {
-      color: #7ec8e3 !important;
       cursor: pointer;
     }
   }
