--- a/Solana_Faucet/src/Components/Balance/Balance.scss
+++ b/Solana_Faucet/src/Components/Balance/Balance.scss
@@ -1,24 +1,17 @@
-$primary-bg-color: #1a1a1a;
-$secondary-bg-color: #333333;
-$text-color: #ffffff;
-$accent-color-1: #ff6b6b;
-$accent-color-2: #7ec8e3;
-$accent-color-3: #ffd166;
-
 .balance-container {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   margin-top: 3rem;
-  color: $text-color;
+  color: #ffffff;
   padding: 20px;
   border-radius: 8px;
   text-align: center;
 
   .balance-btn {
-    background-color: $accent-color-3;
-    color: $primary-bg-color;
+    background-color: #ffd166;
+    color: #1a1a1a;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
@@ -27,17 +20,17 @@ $accent-color-3: #ffd166;
     transition: background-color 0.3s;
 
     &:hover {
-      background-color: $accent-color-1;
+      background-color: #ff6b6b;
     }
 
     &:active {
-      background-color: $accent-color-2;
+      background-color: #7ec8e3;
     }
   }
 
   .balance-details {
     margin-top: 20px;
-    background-color: $secondary-bg-color;
+    background-color: #333333;
     padding: 15px;
     border-radius: 8px;
 
@@ -45,7 +38,7 @@ $accent-color-3: #ffd166;
       margin: 10px 0;
       font-size: 1.5em;
       font-weight: normal;
-      color: $accent-color-2;
+      color: #7ec8e3;
     }
   }
 }
